src/style.css
:root {
  --img-ratio: 0.504;
  --box-shadow-bgc: 53, 56, 92;
}

::selection {
  color: black;
  background-color: #ffd064;
}

::-moz-selection {
  color: black;
  background-color: #ffd064;
}

html {
  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: white;
  scroll-behavior: smooth;
}

h1 {
  font-size: 6rem;
}

h2 {
  font-size: 5rem;
}

p {
  font-size: 1.5rem;
  color: #9e9e9e;
}

body {
  margin: 0;
  background-color: #020202;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.banner-heading {
  display: flex;
  max-width: 100%;
  justify-content: center;
  align-items: center;
  overflow-x: hidden;
  margin-top: 0;
}

.banner-heading img {
  max-height: min(140vh, 1500px);

  @media (max-aspect-ratio: 17/10) {
    margin-left: 10%;
  }

  @media (max-aspect-ratio: 31/20) {
    margin-left: 25%;
  }

  @media (max-aspect-ratio: 7/5) {
    margin-left: 40%;
  }
  @media (max-aspect-ratio: 31/25) {
    margin-left: 55%;
  }
}

main > * {
  max-width: 70%;
  min-height: 70%;
  margin: 50px 0;
}

.projects-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 180px;
}

.img-slider-container {
  position: relative;
  width: 60vw;
  height: calc(60vw * var(--img-ratio));
  transition: border .2s;

  @media (max-width: 1200px) {
    width: 70vw;
    height: calc(70vw * var(--img-ratio));
  }


  @media (max-width: 900px) {
    width: 80vw;
    height: calc(80vw * var(--img-ratio));
  }
}

.img-slider-container .sliding-img {
  position: absolute;
  display: flex;
  align-items: center;
  transition: transform .2s;
}

.img-slider-container .sliding-img::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: black;
  transition: opacity .2s;
}

.sliding-img img {
  max-width: 100%;
}

.sliding-img img:nth-of-type(2),
.sliding-img picture:nth-of-type(2) img {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  filter: blur(45px);
  z-index: -1;
  transition: opacity .2s;
}

.carouselLeftLeft {
  transform: translateX(-13%) scale(.8);
  z-index: -3;
}

.carouselLeftLeft::before {
  opacity: .85;
}


.carouselLeft {
  transform: translateX(-7%) scale(.9);
  z-index: -2;
}

.carouselLeft::before {
  opacity: .6;
}

.carouselCenter {
  transform: translateX(0) scale(1);
  z-index: 0;
}

.carouselCenter::before {
  opacity: 0;
}

.carouselRight {
  transform: translateX(7%) scale(.9);
  z-index: -2;
}

.carouselRight::before {
  opacity: .6;
}

.carouselRightRight {
  transform: translateX(13%) scale(.8);
  z-index: -3;
}

.carouselRightRight::before {
  opacity: .85;
}

.carouselHideLeft {
  transform: translateX(-19%) scale(.7);
  opacity: 0;
}

.carouselHideRight {
  transform: translateX(19%) scale(.7);
  opacity: 0;
}

.box-shadow-visible > img:nth-of-type(2) {
  opacity: .5;
}

.project-description-container {
  position: relative;
  margin: 40px 0;
}

.project-description-container > p {
  text-align: center;
  transition: opacity .2s;
}

.project-description-container > :last-child {
  position: absolute;
  top: 0;
  left: 0;
}

.hide { opacity: 0 }

.show { opacity: 1 }

.arrows-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.arrows-container > svg {
  fill: rgba(0, 0, 0, .7);
  max-width: 48px;
  max-height: 48px;
  filter: drop-shadow(0 0 10px rgba(255, 255, 255, 1));
}

